# deadmint

./: .gitignore  README.md
backend/: .env.example  package.json  tsconfig.json
backend/src/: config.ts  gameManager.ts  gameWorker.ts  index.ts  routes.ts  solana.ts  types.ts  wsServer.ts
backend/src/idl/: deadmint.json  deadmint.ts
frontend/: next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/rpc/: route.ts
frontend/app/create/: page.tsx
frontend/app/game/[id]/: page.tsx
frontend/app/games/: page.tsx
frontend/components/: GameCanvas.tsx  GameHUD.tsx  GameOverModal.tsx  GraveyardBackground.tsx  Leaderboard.tsx  Lobby.tsx  ThemeSelector.tsx  WalletButton.tsx
frontend/components/ui/: PixelButton.tsx
frontend/hooks/: useGameState.ts  usePlayerInput.ts
frontend/lib/: backendWs.ts  constants.ts  gameRenderer.ts  gameService.ts  gameSession.ts  sessionKey.ts  themes.ts  transactions.ts  types.ts
frontend/lib/idl/: deadmint.json  deadmint.ts
frontend/providers/: ThemeProvider.tsx  WalletProvider.tsx
programs/deadmint/: Cargo.toml
programs/deadmint/src/: lib.rs
programs/deadmint/src/instructions/: mod.rs
programs/deadmint/src/state/: battle.rs  bet_slip.rs  fighter.rs  tournament.rs
solana/: Anchor.toml  Cargo.toml  package.json
solana/patches/session-keys/src/: lib.rs
solana/programs-ecs/components/bomb/: Cargo.toml
solana/programs-ecs/components/bomb/src/: lib.rs
solana/programs-ecs/components/game-config/: Cargo.toml
solana/programs-ecs/components/game-config/src/: lib.rs
solana/programs-ecs/components/grid/: Cargo.toml
solana/programs-ecs/components/grid/src/: lib.rs
solana/programs-ecs/components/player/: Cargo.toml
solana/programs-ecs/components/player/src/: lib.rs
solana/programs-ecs/systems/check-game-end/: Cargo.toml
solana/programs-ecs/systems/check-game-end/src/: lib.rs
solana/programs-ecs/systems/claim-prize/: Cargo.toml
solana/programs-ecs/systems/claim-prize/src/: lib.rs
solana/programs-ecs/systems/detonate-bomb/: Cargo.toml
solana/programs-ecs/systems/detonate-bomb/src/: lib.rs
solana/programs-ecs/systems/init-game/: Cargo.toml
solana/programs-ecs/systems/init-game/src/: lib.rs
solana/programs-ecs/systems/join-game/: Cargo.toml
solana/programs-ecs/systems/join-game/src/: lib.rs
solana/programs-ecs/systems/move-player/: Cargo.toml
solana/programs-ecs/systems/move-player/src/: lib.rs
solana/programs-ecs/systems/place-bomb/: Cargo.toml
solana/programs-ecs/systems/place-bomb/src/: lib.rs
solana/programs/deadmint/: Cargo.toml
solana/programs/deadmint/src/: constants.rs  error.rs  errors.rs  lib.rs  state.rs
solana/programs/deadmint/src/instructions/: advance_round.rs  attack.rs  check_game_end.rs  claim_bet_winnings.rs  claim_loot.rs  claim_prize.rs  claim_resurrection.rs  create_boss.rs  create_tournament.rs  delegate.rs  detonate_bomb.rs  initialize_game.rs  initialize_protocol_config.rs  join_game.rs  mod.rs  move_player.rs  place_bet.rs  place_bomb.rs  register_fighter.rs  resolve_battle.rs  sell.rs  start_battle.rs  undelegate.rs
solana/programs/deadmint/src/state/: battle.rs  bet_slip.rs  boss.rs  fighter.rs  mod.rs  prize_pool.rs  protocol_config.rs  raid_ticket.rs  tournament.rs
solana/tests/: deadmint-anchor.ts  deadmint.ts
tests/: deadmint.ts
