[package]
name = "deadmint"
version = "0.1.0"
description = "Deadmint - Financialized Bomberman on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deadmint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc"] }
