[package]
name = "init-game"
version = "0.2.4"
description = "Deadmint Bomberman - InitGame system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "init_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
game-config = { version = "0.2.4", path = "../../components/game-config", features = ["cpi"] }
grid = { version = "0.2.4", path = "../../components/grid", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
